# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml  spec.yaml.example  sqlx-data.json
.github/workflows/: general.yaml
configuration/: base.yml  local.yml  production.yml
migrations/: 20220106090112_create_subscriptions_table.sql  20220208032625_make_status_not_null_in_subscriptions.sql  20220208034008_create_subscription_tokens_table.sql  20220221044526_create_users_table.sql  20220301094849_seed_user.sql  20220323094358_create_idempotency_table.sql  20220325065921_create_newsletter_issues_table.sql  20220325070825_create_issue_delivery_queue_table.sql
scripts/: dockerbuild.sh  init_all_local.sh  init_db.sh  init_local_redis.sh  init_redis.sh  migrate.sh  new_app.sh  remove_db.sh  sqlx_prepare.sh  staging-editor.sh  watcher.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  idempotency.rs  issue_delivery_worker.rs  lib.rs  main.rs  routes.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: admin.rs  home.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  newsletters.rs
src/routes/admin/newsletters/: get.rs  newsletters.html  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  newsletters.rs  subscription.rs  subscription_confirm.rs  subscriptions.rs
