[package]
name = "zero2prod" # name of lib
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod" # this is the file name of the binary


[dependencies]
actix-web = "4.0.0-beta.19"
tokio = { version = "1.15.0",features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.133", features = ["derive"] }
reqwest = "0.11.7"
config = "0.11.0"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.14"
tracing = {version = "0.1.19", features = ["log"]} # log features to enable log
# tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
# tracing-bunyan-formatter = "0.3.1" # tracing bunyan formatter makes enabled logger with tracing and library from writer 
# tracing-log = "0.1.1" # don't know whats for
# tracing-actix-web = "=0.5.0-beta.9" # for lib TracingLogger

[dependencies.sqlx]
version = "0.5.10"
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid", 
    "chrono",
    "migrate"
]

