[package]
name = "zero2prod" # name of lib
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod" # this is the file name of the binary


[dependencies]
actix-web = "4.0.0-beta.19"
tokio = { version = "1.15.0",features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.133", features = ["derive"] }
config = "0.11.0"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"
tracing = {version = "0.1.19", features = ["log"]} # log features to enable log
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1" # library from writer to enable layer inheritance
tracing-log = "0.1.1" # register log implementation to redirect logs into tracing subscriber
# tracing-actix-web = "=0.5.0-beta.9" # for lib TracingLogger
dotenv = "0.15.0"

[dependencies.sqlx]
version = "0.5.10"
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid", 
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1.9.0"
reqwest = "0.11.7"

