[package]
name = "zero2prod" # name of lib
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"   # this is the file name of the binary


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.11" # need porting to newer version
uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
tracing = { version = "0.1", features = [
    "log",
] } # log features to enable log
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3" # library from writer to enable layer inheritance
tracing-log = "0.1" # register log implementation to redirect logs into tracing subscriber
tracing-actix-web = "0.5" # for lib TracingLogger
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "3.0.1"
unicode-segmentation = "1"
validator = "0.14"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] }
base64 = "0.13"
argon2 = { version = "0.3", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"]}
sha2 = "0.10"
hex = "0.4"
time = "0.3"
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
serde_json = "1"


[dependencies.actix-session]
git = "https://github.com/LukeMathWalker/actix-extras"
branch = "rework-actix-session"
features = ["redis-rs-tls-session"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.5.10"
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
once_cell = "1.9.0"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5.10"
linkify = "0.8"
claim = "0.5"
dotenv = "0.15"


